Fix: add account register/login
